[project]
name = "langchain-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.2.1",
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.0.1",
    "langchain>=1.0.1",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
]
